# offense-deffense-game

./: CAuxiliary.cpp  CAuxiliary.h  CConstants.h  CDefenceUnit.cpp  CDefenceUnit.h  CGameAdmin.cpp  CGameAdmin.h  CLocation.cpp  CLocation.h  CMakeLists.txt  COffenceUnit.cpp  COffenceUnit.h  CReader.cpp  CReader.h  CUnitProperty.cpp  CUnitProperty.h  Game.cpp  Game.sln  Game.vcxproj  Game.vcxproj.filters  README.md
Resources/: Attack.txt  Defence.txt  UnitsProperties.txt
